# sonicdpi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_LICENSES.md  deny.toml  diag.ps1  sweep.ps1
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: field-report.yml
.github/workflows/: ci.yml  release.yml
crates/sonicdpi-cli/: Cargo.toml  build.rs
crates/sonicdpi-cli/src/: main.rs  service.rs
crates/sonicdpi-engine/: Cargo.toml
crates/sonicdpi-engine/src/: action.rs  builder.rs  dns.rs  embedded_fakes.rs  fakes.rs  flow.rs  fooling.rs  lib.rs  packet.rs  probing.rs  profile.rs  proxy.rs  strategy.rs  target.rs  tls.rs
crates/sonicdpi-macos-nex/: Cargo.toml
crates/sonicdpi-macos-nex/src/: ffi.rs  lib.rs
crates/sonicdpi-platform/: Cargo.toml
crates/sonicdpi-platform/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sonicdpi-tray/: Cargo.toml  build.rs
crates/sonicdpi-tray/src/: elevation.rs  engine_guard.rs  icons.rs  main.rs
docs/: 2026-05-status.md  diagnostics.md  dzen-tg-unblock.md  dzen-tg-unblock.txt  habr-article.md  macos-networkextension.md  platform-backends.md  research-techniques-2026.md
macos-nex/: Makefile  README.md
macos-nex/Extension/: Extension.entitlements  Info.plist  PacketFilterProvider.swift
macos-nex/HostApp/: HostApp.entitlements  HostAppMain.swift  Info.plist
profiles/: cf-tune-1-ttl2.toml  cf-tune-2-ttl8.toml  cf-tune-3-maxru.toml  youtube-discord-2026-05.toml
scripts/: diag.bat  diag.ps1
