[workspace]
resolver = "2"
members = [
    "crates/sonicdpi-engine",
    "crates/sonicdpi-platform",
    "crates/sonicdpi-cli",
    "crates/sonicdpi-tray",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sonicdpi/sonicdpi"
authors = ["SonicDPI contributors"]

[workspace.dependencies]
anyhow      = "1"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
bytes       = "1"
once_cell   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
clap        = { version = "4", features = ["derive", "wrap_help"] }
ctrlc       = "3"
crossbeam-channel = "0.5"
ipnet       = { version = "2", features = ["serde"] }

# Packet processing
etherparse  = "0.16"

# Profile / dev release tuning
[profile.release]
lto         = "thin"
codegen-units = 1
panic       = "abort"
strip       = "symbols"

[profile.dev]
opt-level   = 1
