[package]
name = "sonicdpi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicDPI — open-source DPI bypass engine for YouTube and Discord. CLI + service."

[[bin]]
name = "sonicdpi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
sonicdpi-engine   = { path = "../sonicdpi-engine", version = "0.1" }
sonicdpi-platform = { path = "../sonicdpi-platform", version = "0.1" }
