[package]
name = "sonicdpi-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-OS packet interception backends behind a uniform trait."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
sonicdpi-engine = { path = "../sonicdpi-engine", version = "0.1" }

# --- Windows: WinDivert ---
[target.'cfg(target_os = "windows")'.dependencies]
windivert   = { version = "0.6", default-features = false }
windows-sys = { version = "0.59", features = ["Win32_Security", "Win32_System_Threading", "Win32_Foundation"] }

# --- Linux: NFQUEUE (pure-Rust, no GPL libnetfilter_queue) ---
[target.'cfg(target_os = "linux")'.dependencies]
nfq         = "0.2"
caps        = "0.5"
socket2     = { version = "0.5", features = ["all"] }
libc        = "0.2"
parking_lot = { workspace = true }

# --- macOS: pf rdr-to + transparent proxy (IPPROTO_DIVERT was removed
# from the XNU kernel, so divert(4) is unavailable on modern macOS).
# We use pf to redirect target ports to a local listener and act as a
# transparent proxy à la zapret-mac / byedpi.
[target.'cfg(target_os = "macos")'.dependencies]
nix     = { version = "0.29", features = ["socket", "net", "ioctl"] }
libc    = "0.2"
socket2 = { version = "0.5", features = ["all"] }
