[package]
name = "sonicdpi-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicDPI — system-tray on/off toggle for end users."

[[bin]]
name = "sonicdpi-tray"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true

sonicdpi-engine = { path = "../sonicdpi-engine", version = "0.1" }
# No sonicdpi-platform dependency: the tray spawns sonicdpi.exe as a
# child process so it never has to load WinDivert in-process. This
# also means the tray binary itself doesn't need WinDivert.dll to
# launch — only sonicdpi.exe does.

# Cross-platform tray icon. tray-icon needs an event loop on Windows
# to pump menu messages; we use winit (already a transitive dep elsewhere
# in production Rust apps and gives us full Win/Mac/Linux coverage).
tray-icon = "0.19"
winit     = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
